[package]
name = "esp-max7219-nostd"
version = "0.1.0"
authors = ["Kirill Mikhailov <playfulfence@gmail.com>"]
edition = "2018"
keywords = ["max7219", "ledcontrol", "no-std"]
categories = ["hardware-support", "no-std"]

readme = "README.md"
license = "MIT"
homepage = "https://github.com/playfulFence/esp-max7219-nostd"
repository = "https://github.com/playfulFence/esp-max7219-nostd"

[dependencies]
embedded-hal = "1.0.0-alpha.9"
max7219 = "0.3.1"
esp-hal-common = { package = "esp-hal-common", git = "https://github.com/esp-rs/esp-hal.git", version = "0.9.0"}
esp-alloc = "0.3.0"

[features]
default = [ ]

esp32 = ["esp-hal-common/esp32", "esp-hal-common/esp32_26mhz"]
esp32c3 = ["esp-hal-common/esp32c3"]
esp32s2 = ["esp-hal-common/esp32s2"]
esp32s3 = ["esp-hal-common/esp32s3"]
esp32c6 = ["esp-hal-common/esp32c6"]


