[package]
name = "esp-max7219-nostd"
version = "0.3.0"
authors = ["Kirill Mikhailov <playfulfence@gmail.com>"]
edition = "2018"
keywords = ["max7219", "ledcontrol", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]

readme = "README.md"
license = "MIT"
homepage = "https://github.com/playfulFence/esp-max7219-nostd"
repository = "https://github.com/playfulFence/esp-max7219-nostd"

[dependencies]
embedded-hal = { version = "0.2.7" }
max7219 = "0.4.2"
